--- a/_assets/stylesheets/mermaid.css
+++ b/_assets/stylesheets/mermaid.css
@@ -1,3 +1,7 @@
+/* TODO: resize based on the container outlining the text */
+#i141 {
+    width: 550px;
+}
 /* Flowchart variables */
 /* Sequence Diagram variables */
 /* Gantt chart variables */
@@ -15,10 +19,10 @@
   stroke: #333333;
 }
 .cluster rect {
-  fill: #ffffde;
-  rx: 40;
-  stroke: #aaaa33;
-  stroke-width: 1px;
+  fill: #ffffde !important;
+  rx: 4 !important;
+  stroke: #aaaa33 !important;
+  stroke-width: 1px !important;
 }
 .cluster text {
   fill: #333333;
@@ -253,4 +257,8 @@ text.actor {
 text {
   font-family: 'trebuchet ms', verdana, arial;
   font-size: 14px;
+}
+
+.mermaid {
+  width:1200px;
 }
