--- a/_sass/normalize.scss
+++ b/_sass/normalize.scss
@@ -390,9 +390,9 @@ textarea {
  * Remove most spacing between table cells.
  */
 
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    margin-bottom: 1.5em;
-    width: 100%; /* make full width */
-}
+//table {
+//    border-collapse: collapse;
+//    border-spacing: 0;
+//    margin-bottom: 1.5em;
+//    width: 100%; /* make full width */
+//}
