--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -67,3 +67,12 @@ $small            : "only screen and (min-width: 37.5em)";
 $medium           : "only screen and (min-width: 48em)";
 $large            : "only screen and (min-width: 62em)";
 $x-large          : "only screen and (min-width: 86.375em)";
+
+
+$table-border-color           : $border-color;
+$table-border                 : 1px solid $table-border-color;
+$table-background             : $body-color;
+$table-header-color           : lighten($table-background, 10);
+$table-hover-color            : darken($table-background, 2);
+$table-stripe-color           : darken($table-background, 4);
+$table-stripe-color-hover     : darken($table-stripe-color, 5);
