--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@
     {% include _author-bio.html %}
   </div>
   <div id="index">
-    <h3><a href="{{ site.url}}/posts/">Recent Posts</a></h3>
+    <h3><a href="{{ site.url}}/blog/">Recent Posts</a></h3>
     {% for post in site.posts limit:5 %}    
     <article>
       {% if post.link %}
