--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -731,39 +731,18 @@ $button-size: 1.5rem;
 	@extend .btn;
 }
 
-/** MT: Adding custom table styling code */
-
-.table {
-  border-collapse: collapse;
-  margin: ((0px + $doc-line-height) / 2) 0;
-  margin: ((0rem + ($doc-line-height / $doc-font-size)) / 2) 0;
+table {
+  margin-bottom: 1rem;
   width: 100%;
-  tbody {
-	tr:hover > td, tr:hover > th {
-	  background-color: $table-hover-color;
-	}
-  }
-  thead {
-	tr:first-child td {
-	  border-bottom: 2px solid $table-border-color;
-	}
-  }
-  th {
-	padding: (0px + $doc-line-height) / 2;
-	padding: (0rem + ($doc-line-height / $doc-font-size)) / 2;
-	font-family: $alt-font;
-	font-weight: bold;
-	text-align: left;
-	background-color: $table-header-color;
-	border-bottom: 1px solid darken($border-color, 15%);
-  }
-  td {
-	border-bottom: 1px solid $border-color;
-	padding: (0px + $doc-line-height) / 2;
-	padding: (0rem + ($doc-line-height / $doc-font-size)) / 2;
-	@include font-size(18);
-  }
-  tr, td, th {
-	vertical-align: middle;
-  }
+  border: 1px solid #e5e5e5;
+  border-collapse: collapse;
+}
+td,
+th {
+  padding: .25rem .5rem;
+  border: 1px solid #e5e5e5;
+}
+tbody tr:nth-child(odd) td,
+tbody tr:nth-child(odd) th {
+  background-color: #f9f9f9;
 }
